<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activitys.RegisterationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calibri_regular"
            android:text="@string/create_account"
            android:textColor="@color/text_color"
            android:layout_marginTop="30dp"
            android:textSize="20dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/hint_color">

            <EditText
                android:id="@+id/reg_student_full_name"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:background="@drawable/login_bg"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
                android:hint="Enter Parent full name"
                android:maxLength="30"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/mobile_number">

            <EditText
                android:id="@+id/reg_stud_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:background="@drawable/login_bg"
                android:digits="0123456789"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="Enter password">

            <EditText
                android:id="@+id/reg_parent_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:background="@drawable/login_bg"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/reg_stud_email"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/login_bg"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/login_bg"
                android:hint="@string/city_nearest_location"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chkTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="2dp"
                android:text="Terms and Conditions"
                android:textColor="@color/red"
                android:textSize="12dp" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_login_bg"
            android:fontFamily="@font/calibri_regular"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/bottom_back"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/signup"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/calibri_regular"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/alredy_account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/calibri_regular"
            android:gravity="center"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:textStyle="bold" />
    </LinearLayout>

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="60dp"-->
    <!--        android:background="@drawable/bottom_back" />-->

</LinearLayout>