<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/dashbord_nav_transrent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/student_name_red_navdra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/futu_md"
                android:gravity="center"
                android:text="Student Name"
                android:textColor="@color/red"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/student_name_red_navdra"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/futu_md"
                android:gravity="center"
                android:text=" Grade"
                android:id="@+id/student_class"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="normal" />


            <LinearLayout
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginRight="15dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/practice_bg"
                android:id="@+id/dashborad_nav_profile"
            android:gravity="center"
            android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_profile_1"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    app:srcCompat="@drawable/circle_back" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="19dp"
                android:layout_alignParentEnd="true"
                android:id="@+id/edit_dashboard_nav"
                android:background="@drawable/practice_bg"
                android:layout_marginTop="50dp">

                <ImageView
                    android:id="@+id/camera_upload"
                    android:layout_width="15dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_height="15dp"
                    android:layout_marginLeft="7dp"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/ic_tools_edit" />
            </LinearLayout>


            <!--            <LinearLayout-->
            <!--                android:layout_width="80dp"-->
            <!--                android:layout_height="80dp"-->
            <!--                android:layout_alignParentEnd="true"-->
            <!--                android:gravity="center"-->
            <!--                android:layout_marginRight="20dp"-->
            <!--                android:orientation="vertical">-->

            <!--                <ImageView-->
            <!--                    android:id="@+id/img_profile_1"-->
            <!--                    android:layout_width="75dp"-->
            <!--                    android:layout_height="75dp"-->
            <!--                    app:srcCompat="@android:drawable/sym_def_app_icon" />-->
            <!--            </LinearLayout>-->


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bookmark_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/futu_md"
                android:padding="5dp"
                android:text="@string/bookmarks"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="10dp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/notification_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/futu_md"
                android:padding="5dp"
                android:text="@string/notification"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="10dp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/shareapp_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/futu_md"
                android:padding="5dp"
                android:text="@string/shear_app"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="10dp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/parent_connect_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/futu_md"
                android:padding="5dp"
                android:text="@string/parent_connect"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="10dp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/contactus_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/futu_md"
                android:padding="5dp"
                android:text="@string/contact_us"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="10dp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/subscribe_now_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/futu_md"
                android:padding="5dp"
                android:text="@string/subscribe_now"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="10dp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/terms_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/futu_md"
                android:padding="5dp"
                android:text="@string/term_condition"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="10dp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/futu_md"
                android:padding="5dp"
                android:text="Logout"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="10dp"
                android:background="@color/gray" />
        </LinearLayout>

        <ImageView
            android:id="@+id/navi_cancle_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_cancel_icon_red" />

    </LinearLayout>
</LinearLayout>